Kubernetes_Webapp/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - env:
            - name: DEFAULT_HOST
              value: anointan.example
          image: jwilder/nginx-proxy:latest
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /tmp/docker.sock
              name: nginx-hostpath0
              readOnly: true
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /var/run/docker.sock
          name: nginx-hostpath0
status: {}
