Kubernetes_Webapp/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "3080"
      port: 3080
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
